# internal/handlers/auth.go
@@ -16,6 +16,19 @@ func NewHandler(authService *services.AuthService) *Handler {
 	return &Handler{authService: authService}
 }
 
+// RegisterHandler
+// @Summary Регистрация нового пользователя
+// @Tags Аутентификация
+// @Description Регистрирует нового пользователя с указанными email, паролем и ролью
+// @Accept multipart/form-data
+// @Produce json
+// @Param email formData string true "Email пользователя"
+// @Param password formData string true "Пароль пользователя"
+// @Param role formData string true "Роль пользователя (Author или Reader)"
+// @Success 200 {object} string "Токены доступа и обновления"
+// @Failure 400 {string} string "Неверный формат email"
+// @Failure 403 {string} string "Email уже существует"
+// @Router /api/auth/register [post]
 func (h *Handler) RegisterHandler(c *gin.Context) {
 	var input struct {
 		Email    string `json:"email" binding:"required,email"`
@@ -37,6 +50,17 @@ func (h *Handler) RegisterHandler(c *gin.Context) {
 	c.JSON(http.StatusOK, gin.H{"message": "Регистрация прошла успешно"})
 }
 
+// LoginHandler
+// @Summary Вход в систему
+// @Tags Аутентификация
+// @Description Выполняет вход в систему с указанием email и пароля
+// @Accept multipart/form-data
+// @Produce json
+// @Param email formData string true "Email пользователя"
+// @Param password formData string true "Пароль пользователя"
+// @Success 200 {object} string "Токены доступа и обновления"
+// @Failure 403 {string} string "Неверный логин или пароль"
+// @Router /api/auth/login [post]
 func (h *Handler) LoginHandler(c *gin.Context) {
 	var input struct {
 		Email    string `json:"email" binding:"required,email"`
@@ -68,6 +92,16 @@ func (h *Handler) LoginHandler(c *gin.Context) {
 	c.JSON(http.StatusOK, gin.H{"message": "Вход выполнен успешно"})
 }
 
+// RefreshTokenHandler
+// @Summary Обновление токена
+// @Tags Аутентификация
+// @Description Обновляет токен доступа с помощью токена обновления
+// @Accept json
+// @Produce json
+// @Param refreshToken body string true "Токен обновления"
+// @Success 200 {object} string "Новый токен доступа"
+// @Failure 400 {string} string "Токен обновления недействителен"
+// @Router /api/auth/refresh-token [post]
 func (h *Handler) RefreshTokenHandler(c *gin.Context) {
 	refreshToken, err := c.Cookie("refreshToken")
 	if err != nil {
